WIP major styling overhaul

--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,11 @@
       name="description"
       content="Web site created using create-react-app"
     />
+
+    <!-- Animate on Scroll loads -->
+    <link rel="stylesheet" href="%PUBLIC_URL%/aos/aos.css" />
+    <script src="%PUBLIC_URL%/aos/aos.js"></script>
+
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.jpeg" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
